# dynsim

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_benzene_toluene.py  run_ethanol_water.py
src/: __init__.py  _trash.py  activity_coefficient_models.py  column_models.py  data_loader.py  equilibrium_calculations.py  mixture_prop.py  mixure_prop.py  pure_comp_prop.py  system_parameters.py  util_general.py
src/data/: d_PureComponentDatabase.xlsx  d_UNIFAC1p.xlsx  pure_comp_data - Copy.csv
src/dynsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sep2p/: __init__.py  column_models.py  data_loader.py  equilibrium_calculations.py  mixture_prop.py  phys_constants.py  pure_comp_prop.py  system_parameters.py  utils.py
src/sep2p/data/: mixture_liquid_unifac1p_aij.csv  mixture_liquid_unifac1p_main2sub.csv  mixture_liquid_unifac1p_nu.csv  mixture_liquid_unifac1p_rq.csv  pure_comp_data.csv
tests/: test_mixture_properties.py  test_pure_properties.py
