[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.1.0"
description = "A simple example project"
authors = [
    { name="Thomas Bisgaard Astrup", email="biss3n@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6"
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "scipy==1.16.3",
    "six==1.17.0",
    "tzdata==2025.2",
    "urllib3==2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]