[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynsim"
version = "0.1.0"
description = "A simple example project"
authors = [
    { name="Thomas Bisgaard Astrup", email="biss3n@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"

]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]